--- a/HW_5.css
+++ b/HW_5.css
@@ -33,7 +33,7 @@ body, html
 {
 	background-color: black; color: yellow;
 	font-family: "Droid Sans", arial, verdana, sans-serif; font-weight: bold;
-	min-height: 100vh; width: 100vw;
+	height: 100vh; width: 100vw;
     overflow-x: hidden;
     user-select: none;
 }
@@ -50,7 +50,6 @@ button.audio
     border: none;
     position: absolute;
     height: 2rem; width: 2rem;
-    left: 1rem; top: 1rem;
 }
 button#show
 {
@@ -71,12 +70,12 @@ div#scroll
 {
 	animation: scroll 30s linear 0s;
 	position: absolute;
-	top: 100%;
+	top: 105%;
 }
 @keyframes scroll
 {
-	0% {top: 100%}
-	100% {top: -80%}
+	0% {top: 105%}
+	100% {top: -95%}
 }
 h1, span.cross
 {
